--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.kai.ninerauth.FirstFragment"
+        android:name="com.kai.ninerauth.ui.login.LoginFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.kai.ninerauth.SecondFragment"
+        android:name="com.kai.ninerauth.ui.register.RegisterFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
