--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -70,11 +70,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextProfilePassword" />
 
     <Button
-        android:id="@+id/buttonProfileLogout"
+        android:id="@+id/buttonProfileCancel"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
-        android:text="@string/logout_button"
+        android:text="@android:string/cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonProfileUpdate" />
