--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,10 +7,9 @@
 
     <ImageView
         android:id="@+id/imageViewItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="189dp"
+        android:layout_height="223dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -23,7 +22,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +37,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="#E53935"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +53,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="#29CD30"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,21 +65,23 @@
         android:id="@+id/floatingActionButtonMinus"
         android:layout_width="37dp"
         android:layout_height="25dp"
-        android:layout_marginStart="168dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
+        android:foreground="@drawable/minus"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageViewItem"
         app:layout_constraintTop_toBottomOf="@+id/textViewFinalPrice"
-        app:srcCompat="@android:drawable/btn_plus" />
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButtonPlus"
         android:layout_width="25dp"
         android:layout_height="27dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginEnd="8dp"
         android:clickable="true"
+        android:foreground="@drawable/plus"
         app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtonMinus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewQuantity"
@@ -115,7 +116,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewItem"
         app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />
